# QuickFinance

./: .gitignore  README.md  build.bat  build_resources.py  main.py  pyproject.toml  resource_rc.py
resource/: resource.qrc
resource/ui/: Ui_main.py  main.ui
views/: Ui_main.py
