[project]
name = "quickfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipdb>=0.13.13",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyside6-fluent-widgets[full]>=1.8.7",
    "xlrd>=2.0.2",
]
